// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 1661,
      "name": "q",
      "pick": Array [],
      "pos": 1605,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 1788,
      "name": "levelisationId",
      "pick": Array [],
      "pos": 1706,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "lastPos": 1910,
      "name": "ids",
      "pick": Array [],
      "pos": 1805,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
    Object {
      "lastPos": 1942,
      "name": "sortField",
      "pick": Array [],
      "pos": 1931,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 1970,
      "name": "sortOrder",
      "pick": Array [],
      "pos": 1959,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 2581,
      "name": "limit",
      "pick": Array [],
      "pos": 2575,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "number",
      },
    },
    Object {
      "lastPos": 2601,
      "name": "offset",
      "pick": Array [],
      "pos": 2594,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "installationId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Done",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "optional": false,
        "type": "boolean",
      },
    },
    Object {
      "name": "generationStartReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "generationStartReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationEndReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "generationEndReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationPercentageSplit",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "generationPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "generationEnergy",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportStartReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "exportStartReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportEndReadOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "exportEndReadValue",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportPercentageSplit",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "exportPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "exportEnergy",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "totalPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "vatPayment",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "cfrFitId",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 542,
      "name": "ids",
      "pick": Array [],
      "pos": 529,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 2255,
      "name": "q",
      "pick": Array [],
      "pos": 1192,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 2329,
      "name": "ids",
      "pick": Array [],
      "pos": 2272,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Object {
          "type": "number",
        },
        "type": "array",
      },
    },
    Object {
      "lastPos": 2634,
      "name": "limit",
      "pick": Array [],
      "pos": 2628,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "number",
      },
    },
    Object {
      "lastPos": 2654,
      "name": "offset",
      "pick": Array [],
      "pos": 2647,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "firstName",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "lastName",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "address",
      "type": Object {
        "optional": undefined,
        "type": "string",
      },
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "items": Object {
          "optional": false,
          "type": "string",
        },
        "type": "array",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 620,
      "name": "quarter",
      "pick": Array [],
      "pos": 611,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "lastPos": 635,
      "name": "perPage",
      "pick": Array [],
      "pos": 626,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 650,
      "name": "offset",
      "pick": Array [],
      "pos": 642,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "fitId",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "name",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "amount",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "quarter",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "bankDetails",
      "type": Object {
        "optional": undefined,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine1",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine2",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "addressLine3",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql delete-accounts.query.sql: delete-accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 263,
      "name": "type",
      "pick": Array [],
      "pos": 251,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "FIT",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "lastPos": 291,
      "name": "state",
      "pick": Array [],
      "pos": 284,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "customerId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 223,
      "name": "installationId",
      "pick": Array [],
      "pos": 205,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "lastPos": 454,
      "name": "exportDateOn",
      "pick": Array [],
      "pos": 429,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Date",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "dateOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 98,
      "name": "meterId",
      "pick": Array [],
      "pos": 89,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "lastPos": 53,
      "name": "removalDate",
      "pick": Array [],
      "pos": 40,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "unknown",
      },
    },
  ],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 320,
      "name": "ids",
      "pick": Array [],
      "pos": 314,
      "required": false,
      "spread": true,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "tariffId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "rate",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "tariffCode",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Export",
          },
          Object {
            "type": "literal",
            "value": "Generation",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 215,
      "name": "meterId",
      "pick": Array [],
      "pos": 92,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "lastPos": 215,
      "name": "reason",
      "pick": Array [],
      "pos": 102,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "lastPos": 215,
      "name": "type",
      "pick": Array [],
      "pos": 111,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "lastPos": 215,
      "name": "dateOn",
      "pick": Array [],
      "pos": 127,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "lastPos": 215,
      "name": "submittedAt",
      "pick": Array [],
      "pos": 160,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "lastPos": 215,
      "name": "value",
      "pick": Array [],
      "pos": 198,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "number",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 597,
      "name": "id",
      "pick": Array [],
      "pos": 593,
      "required": false,
      "spread": false,
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "lastPos": 632,
      "name": "offset",
      "pick": Array [],
      "pos": 624,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
    Object {
      "lastPos": 647,
      "name": "perPage",
      "pick": Array [],
      "pos": 638,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "string",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "optional": false,
        "type": "number",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "optional": true,
        "type": "string",
      },
    },
    Object {
      "name": "createdAt",
      "type": Object {
        "optional": false,
        "type": "Date",
      },
    },
    Object {
      "name": "updatedAt",
      "type": Object {
        "optional": true,
        "type": "Date",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "optional": true,
        "type": "number",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "optional": false,
        "type": "string",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;
